--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Alurapic</title>
+		<title>GalvaoPic</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/efeitos.css">
 		<script src="js/lib/angular.min.js"></script>
-        <script src="js/lib/angular-animate.min.js"></script>
-        <script src="js/lib/angular-route.min.js"></script>
-        <script src="js/lib/angular-resource.min.js"></script>
+    <script src="js/lib/angular-animate.min.js"></script>
+    <script src="js/lib/angular-route.min.js"></script>
+    <script src="js/lib/angular-resource.min.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/controllers/fotos-controller.js"></script>
-        <script src="js/controllers/foto-controller.js"></script>
+    <script src="js/controllers/foto-controller.js"></script>
 		<script src="js/controllers/grupos-controller.js"></script>
 		<script src="js/directives/minhas-diretivas.js"></script>
         <script src="js/services/meus-servicos.js"></script>
@@ -23,6 +23,6 @@
 
 			<ng-view></ng-view>
 
-		</div> <!-- fim container -->        
+		</div>
 	</body>
 </html>
